Gtk-3.20&3.22: [Caja] Fix missing background in rename-entry area
Same as Nemo, devs completely ignore 'selection' node in entry node...
Caja was really converted to Gtk+ 3.2x? I can't believe that... :/

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -1663,6 +1663,10 @@ PanelSeparator {
  * Caja *
  ********/
 
+.caja-desktop.caja-canvas-item {
+  @extend .nautilus-desktop.nautilus-canvas-item;
+}
+
 .caja-navigation-window {
   // side-panel styling
   .caja-side-pane {
@@ -1761,10 +1765,18 @@ PanelSeparator {
     box-shadow: if($variant == 'light', $inline-shadow-light,
                                         $inline-shadow-dark);
   }
-}
 
-.caja-desktop.caja-canvas-item {
-  @extend .nautilus-desktop.nautilus-canvas-item;
+  // workaround for invisible text in rename entry
+  scrolledwindow widget > widget {
+    &, &:focus {
+      transition: none;
+
+      &:selected { // FIXME: selection node doesn't work?
+        color: $selected_fg_color;
+        background-color: $selected_bg_color;
+      }
+    }
+  }
 }
 
 #caja-extra-view-widget {
